[package]
name = "notion-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime    = "0.48"
shuttle-axum       = "0.48"
axum               = "0.7"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry             = { version = "0.34", features = ["tracing"] }
sentry-tower       = "0.34"
tower-http         = { version = "0.5", features = ["cors"] }
