[package]
name = "notion-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = "0.8"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry             = { version = "0.48", features = ["tracing"] }
sentry-tower       = { version = "0.48", features = ["http"] }
tower-http         = { version = "0.6", features = ["cors"] }
tower_governor     = "0.8"
hmac               = "0.12"
sha2               = "0.10"
hex                = "0.4"
dotenvy            = "0.15"
